syntax = "proto3";

package ibc.lightclients.localhost.v1;

option go_package = "github.com/cosmos/ibc-go/v6/modules/light-clients/09-localhost;localhost";

import "ibc/core/client/v1/client.proto";
import "gogoproto/gogo.proto";

// ClientState defines the 09-localhost client state
message ClientState {
  option (gogoproto.goproto_getters) = false;

  // unique chain identifier
  string chain_id = 1;
  // the latest block height
  ibc.core.client.v1.Height latest_height = 2 [(gogoproto.nullable) = false];
}
